{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 39,
  "lineage": "7144b11f-7c19-86f1-7eac-8b9f4ed879fd",
  "resources": [
    {
      "mode": "data",
      "type": "azurerm_subnet",
      "name": "subnetA",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.1.0/24",
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": true,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/2213e8b1-dbc7-4d54-8aff-b5e315df5e5b/resourceGroups/1-800a82c8-playground-sandbox/providers/Microsoft.Network/virtualNetworks/sandbox-vmnet/subnets/subnet1",
            "name": "subnet1",
            "private_endpoint_network_policies_enabled": false,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "1-800a82c8-playground-sandbox",
            "virtual_network_name": "sandbox-vmnet"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "networkinterface",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/2213e8b1-dbc7-4d54-8aff-b5e315df5e5b/resourceGroups/1-800a82c8-playground-sandbox/providers/Microsoft.Network/networkInterfaces/vm-nic",
            "internal_domain_name_suffix": "uv34qkzvrnwe3hgy0zrgts3jxf.dx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/2213e8b1-dbc7-4d54-8aff-b5e315df5e5b/resourceGroups/1-800a82c8-playground-sandbox/providers/Microsoft.Network/publicIPAddresses/public_ip1",
                "subnet_id": "/subscriptions/2213e8b1-dbc7-4d54-8aff-b5e315df5e5b/resourceGroups/1-800a82c8-playground-sandbox/providers/Microsoft.Network/virtualNetworks/sandbox-vmnet/subnets/subnet1"
              }
            ],
            "location": "westus",
            "name": "vm-nic",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "1-800a82c8-playground-sandbox"
          },
          "dependencies": [
            "azurerm_public_ip.publicip",
            "azurerm_resource_group.resource1",
            "azurerm_virtual_network.vmnet",
            "data.azurerm_subnet.subnetA"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/2213e8b1-dbc7-4d54-8aff-b5e315df5e5b/resourceGroups/1-800a82c8-playground-sandbox/providers/Microsoft.Network/networkSecurityGroups/my-nsg",
            "location": "westus",
            "name": "my-nsg",
            "resource_group_name": "1-800a82c8-playground-sandbox",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "nsg_rule_rdp",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "",
            "destination_address_prefixes": [
              "0.0.0.0/0"
            ],
            "destination_application_security_group_ids": null,
            "destination_port_range": "3389",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/2213e8b1-dbc7-4d54-8aff-b5e315df5e5b/resourceGroups/1-800a82c8-playground-sandbox/providers/Microsoft.Network/networkSecurityGroups/my-nsg/securityRules/allow-rdp",
            "name": "allow-rdp",
            "network_security_group_name": "my-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "1-800a82c8-playground-sandbox",
            "source_address_prefix": "",
            "source_address_prefixes": [
              "203.192.204.50"
            ],
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.nsg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "nsg_rule_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "",
            "destination_address_prefixes": [
              "0.0.0.0/0"
            ],
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/2213e8b1-dbc7-4d54-8aff-b5e315df5e5b/resourceGroups/1-800a82c8-playground-sandbox/providers/Microsoft.Network/networkSecurityGroups/my-nsg/securityRules/allow-ssh",
            "name": "allow-ssh",
            "network_security_group_name": "my-nsg",
            "priority": 200,
            "protocol": "Tcp",
            "resource_group_name": "1-800a82c8-playground-sandbox",
            "source_address_prefix": "",
            "source_address_prefixes": [
              "203.192.204.50"
            ],
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.nsg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "publicip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/2213e8b1-dbc7-4d54-8aff-b5e315df5e5b/resourceGroups/1-800a82c8-playground-sandbox/providers/Microsoft.Network/publicIPAddresses/public_ip1",
            "idle_timeout_in_minutes": 4,
            "ip_address": "40.118.250.125",
            "ip_version": "IPv4",
            "location": "westus",
            "name": "public_ip1",
            "resource_group_name": "1-800a82c8-playground-sandbox",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vmnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "2be87ba5-8b35-4e6c-9cd8-d66269cba9bd",
            "id": "/subscriptions/2213e8b1-dbc7-4d54-8aff-b5e315df5e5b/resourceGroups/1-800a82c8-playground-sandbox/providers/Microsoft.Network/virtualNetworks/sandbox-vmnet",
            "location": "westus",
            "name": "sandbox-vmnet",
            "resource_group_name": "1-800a82c8-playground-sandbox",
            "subnet": [
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/2213e8b1-dbc7-4d54-8aff-b5e315df5e5b/resourceGroups/1-800a82c8-playground-sandbox/providers/Microsoft.Network/virtualNetworks/sandbox-vmnet/subnets/subnet1",
                "name": "subnet1"
              }
            ],
            "tags": {
              "environment": "Test"
            }
          },
          "dependencies": [
            "azurerm_resource_group.resource1"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}